fix: update dependencies and configurations